Update: fixed terminal with issue scrollbar and transparent top nav

--- a/desktop/ui/css/dark-style.css
+++ b/desktop/ui/css/dark-style.css
@@ -69,6 +69,7 @@ QLabel {
     font-weight: lighter;
     letter-spacing: 1px;
     color: rgb(255, 255, 255);
+    background-color: transparent;
 
 }
 
@@ -304,6 +305,7 @@ QScrollBar:vertical {
     border: none; /* Remove the border */
     background: rgb(16, 21, 27);
     width: 8px;
+    margin-top: 55px;
     /*margin: 21px 0px 21px 0px;*/
     border-radius: 4px;
 }
@@ -314,27 +316,31 @@ QScrollBar:vertical {
  }
  QScrollBar::add-line:vertical {
      border: none;
-     background: green;
-     height: 20px;
+     background: rgb(0,0,0);
+     height: 55px;
      border-bottom-left-radius: 4px;
      border-bottom-right-radius: 4px;
-     subcontrol-position: bottom;
+     subcontrol-position: top;
      subcontrol-origin: margin;
  }
  QScrollBar::sub-line:vertical {
      border: none;
-     height: 20px;
-     border-top-left-radius: 0px;
-     border-top-right-radius: 0px;
+     background-color: transparent;
+     height: 0px;
+     margin-top: 55px;
+     border-top-left-radius: 4px;
+     border-top-right-radius: 4px;
      subcontrol-position: top;
      subcontrol-origin: margin;
  }
  QScrollBar::up-arrow:vertical, QScrollBar::down-arrow:vertical {
-     background: transparent;
+     background: rgb(0, 0, 0);
+     border-color: rgb(0,0,0);
+
  }
 
 QScrollBar::add-page:vertical, QScrollBar::sub-page:vertical{
-    background: rgb(16, 21, 27);
+    background: transparent;
 }
 
 QGroupBox {
@@ -349,4 +355,18 @@ QGroupBox::title {
     padding: 0 3px 0 3px;
     background-color: rgb(16, 21, 27);
 }
+
+#outputWidgetTopContainerQFrame,
+#outputWidgetTopContainerQWidget{
+    background-color: rgba(0, 0, 0, 0.5)
+}
+
+
+#outputQFrame{
+    background-color: rgb(0, 0, 0);
+}
+
+#outputTerminalActionQWidget{
+    background-color: rgb(0, 0, 0);
+ }
 
